--- a/index.html
+++ b/index.html
@@ -110,3 +110,95 @@
 
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CV Generator</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://unpkg.com/html2pdf.js"></script>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 20px;
+      background-color: #f2f2f2;
+    }
+
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+
+    form {
+      max-width: 600px;
+      margin: 0 auto;
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    label {
+      font-weight: bold;
+      display: block;
+      margin-bottom: 8px;
+      color: #333;
+    }
+
+    input, textarea {
+      width: 100%;
+      margin-bottom: 15px;
+      padding: 10px;
+      box-sizing: border-box;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+
+    button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 15px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>CV Generator</h1>
+
+  <form id="cvForm">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="bio">Bio:</label>
+    <textarea id="bio" name="bio" rows="4" required></textarea>
+
+    <label for="experience">Experience:</label>
+    <textarea id="experience" name="experience" rows="4" required></textarea>
+
+    <label for="education">Education:</label>
+    <textarea id="education" name="education" rows="4" required></textarea>
+
+    <button type="button" onclick="generatePDF()">Download CV</button>
+  </form>
+
+  <script>
+    function generatePDF() {
+      const cvForm = document.getElementById('cvForm');
+      const pdfOptions = { margin: 10, filename: 'CV.pdf', image: { type: 'jpeg', quality: 0.98 } };
+
+      html2pdf().from(cvForm).set(pdfOptions).outputPdf();
+    }
+  </script>
+
+</body>
+</html>
+
