--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <label for="name">Your Name:</label>
     <input type="text" id="name" name="name" required>
 
-    <label for="message">Your Message:</label>
-    <textarea id="message" name="message" rows="4" required></textarea>
+    <label for="file">Your Message:</label>
+    <input type="file" id="file" name="file" required>
 
     <button type="button" onclick="openWhatsApp()">Send Message</button>
   </form>
@@ -69,7 +69,7 @@
   <script>
     function openWhatsApp() {
       const name = encodeURIComponent(document.getElementById('name').value);
-      const message = encodeURIComponent(document.getElementById('message').value);
+      const file = encodeURIComponent(document.getElementById('file').value);
 
       // Replace '1234567890' with the recipient's WhatsApp number including the country code
       const phoneNumber = '+94740508400';
